--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,27 +4,29 @@
 
 {% block body %}
 
-
+<div class="col-sm-2 offset-sm-5">
+    <h2 class="text-center">Connection</h2>
 {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div class="text-center text-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
 <form  action="{{ path('login') }}" method="post">
     <div class="form-group">
-    <label for="username">Email:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <label for="mailtel">Email ou Télephone:</label>
+    <input class="form-control" type="text" id="mailtel" name="_username" value="{{ last_username }}" />
     </div>
     <div class="form-group">
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+    <label for="password">Mot de passe:</label>
+    <input class="form-control" type="password" id="password" name="_password" />
     </div>
     {#
         If you want to control the URL the user
         is redirected to on success (more details below)
         <input type="hidden" name="_target_path" value="/account" />
     #}
-
+    <div class="text-center">
     <button class="btn btn-primary" type="submit">Connection</button>
+    </div>
 </form>
-
+</div>
 {% endblock %}
