--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,29 +10,35 @@
     <body>
         {% block header %}
             <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-                <h5 class="my-0 mr-md-auto font-weight-normal">Annonce & Co</h5>
+                <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{{ path('welcome') }}">Annonces & Co</a></h5>
                 <nav class="my-2 my-md-0 mr-md-3">
-                    <a class="p-2 text-dark" href="#">Déposer une annonce</a>
+                    <a class="p-2 text-dark" href="#">Lire les annonces</a>
                     {% if is_granted("ROLE_USER") %}
-                    <a class="p-2 text-dark" href="#">Mon compte <span>( {{ app.user.username }} )</span></a>
+                        <a class="p-2 text-dark" href="#">Déposer une annonce</a>
+                        <a class="p-2 text-dark" href="{{ path('account_show') }}">Mon compte <span>( {{ person.username }} )</span></a>
                     {% endif %}
                     <a class="p-2 text-dark" href="#">Support</a>
                     <a class="p-2 text-dark" href="#">Contact</a>
                 </nav>
+                {% if is_granted("ROLE_USER") == false %}
                 <a class="btn btn-outline-primary" href="{{ path('login') }}">Connection</a>
                 <a class="btn btn-outline-primary" href="{{ path('register') }}">Inscription</a>
+                {% endif %}
                 {% if is_granted("ROLE_USER") %}
                 <a class="btn btn-outline-danger" href="{{ path('logout') }}">Déconnection</a>
                 {% endif %}
             </div>
         {% endblock %}
 
-        {% block body %}{% endblock %}
+        {% block body %}
+
+        {% endblock %}
 
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <script src="js/main.js"></script>
         {% endblock %}
     </body>
 </html>
