--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -4,16 +4,20 @@
 
 {% block body %}
 
+    <h2 class="text-center">Formulaire d'inscription</h2>
+<div class="col-sm-4 offset-sm-4">
     {{ form_start(form) }}
-    {{ form_row(form.firstName) }}
-    {{ form_row(form.lastName) }}
-    {{ form_row(form.username) }}
-    {{ form_row(form.phoneNumber) }}
+    {{ form_row(form.firstName, {'label' : 'Prénom'} ) }}
+    {{ form_row(form.lastName, {'label' : 'Nom'}) }}
+    {{ form_row(form.username, {'label' : "Nom d'utilisateur"}) }}
+    {{ form_row(form.phoneNumber , {'label' : 'Téléphone (mobile)'}) }}
     {{ form_row(form.email) }}
-    {{ form_row(form.plainPassword.first) }}
-    {{ form_row(form.plainPassword.second) }}
+    {{ form_row(form.plainPassword.first ,{'label' : 'Mot de passe'}) }}
+    {{ form_row(form.plainPassword.second ,{'label' : 'Confimation mot de passe'}) }}
+<div class="text-center">
+    <button class="btn btn-primary " type="submit">Inscription!</button>
 
-    <button class="btn btn-primary" type="submit">Inscription!</button>
+</div>
     {{ form_end(form) }}
-
+</div>
 {% endblock %}
