--- a/templates/ads/index.html.twig
+++ b/templates/ads/index.html.twig
@@ -1,20 +1,42 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Les Annonces d' Annonces & Co!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="container">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/AdsController.php'|file_link(0) }}">src/Controller/AdsController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/ads/index.html.twig'|file_link(0) }}">templates/ads/index.html.twig</a></code></li>
-    </ul>
-</div>
+
+        <h1>Les annonces</h1>
+
+        <h2>Tableau des annonces</h2>
+
+        <table class="table">
+            <thead>
+            <tr>
+            <td>Image</td>
+            <td>Titre</td>
+            <td>Date</td>
+            <td>Auteur</td>
+            <td>Région</td>
+            <td>Catégorie</td>
+            </tr>
+            </thead>
+            <tbody>
+            {% for ad in ads %}
+                <tr>
+                    <td>image</td>
+                    <td>{{ ad.title }}</td>
+                    <td>{{ ad.creationDate|date }}</td>
+                    <td>{{ ad.author.firstName }} {{ ad.author.lastName }}</td>
+                    <td>{{ ad.region }}</td>
+                    <td>{{ ad.category }}</td>
+
+                </tr>
+            {% endfor %}
+            </tbody>
+
+        </table>
+
+    </div>
 {% endblock %}
