--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,9 +12,9 @@
             <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
                 <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{{ path('welcome') }}">Annonces & Co</a></h5>
                 <nav class="my-2 my-md-0 mr-md-3">
-                    <a class="p-2 text-dark" href="#">Lire les annonces</a>
+                    <a class="p-2 text-dark" href="{{ path('ads') }}">Lire les annonces</a>
                     {% if is_granted("ROLE_USER") %}
-                        <a class="p-2 text-dark" href="#">Déposer une annonce</a>
+                        <a class="p-2 text-dark" href="{{ path('ads_new') }}">Déposer une annonce</a>
                         <a class="p-2 text-dark" href="{{ path('account_show') }}">Mon compte <span>( {{ person.username }} )</span></a>
                     {% endif %}
                     <a class="p-2 text-dark" href="#">Support</a>
