--- a/templates/ads/new.html.twig
+++ b/templates/ads/new.html.twig
@@ -3,11 +3,12 @@
 {% block title %}Déposer une annonce{% endblock %}
 
 {% block body %}
-    <h1>Déposer une annonce</h1>
 
    {# <a href="{{ path('photo_new' ,{'ads': ads.id} ) }}" class="btn btn-primary">Ajouter des photo</a>#}
+    <div class="col-sm-4 offset-sm-4">
+        <h1>Déposer une annonce</h1>
+        {{ include('ads/_form.html.twig') }}
+        <a href="{{ path('account_show') }}">retour à mon compte</a>
+    </div>
 
-    {{ include('ads/_form.html.twig') }}
-
-    <a href="{{ path('account_show') }}">retour à mon compte</a>
 {% endblock %}
