--- a/templates/ads/index.html.twig
+++ b/templates/ads/index.html.twig
@@ -17,24 +17,44 @@
                 <td>Image</td>
                 <td>Titre</td>
                 <td>Date</td>
-                <td>Auteur</td>
+                <td>Nom d'utilisateur</td>
                 <td>Région</td>
                 <td>Catégorie</td>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <td>Masquer</td>
+                {% endif %}
             </tr>
             </thead>
             <tbody>
             {% for ad in ads %}
+                {% if is_granted('ROLE_ADMIN') or (ad.isActive and is_granted('ROLE_USER')) or (ad.isActive and is_granted('IS_AUTHENTICATED_ANONYMOUSLY'))%}
                 <tr class='clickable-row' data-href="{{ path('ads_show' , { 'ad' : ad.id}) }}">
-                        <td><img class="img-fluid img-thumbnail" width="200" src="{{ path('photo_show_one' , { 'ad' : ad.id })}}" alt="img_annonce"></td>
-                        <td>{{ ad.title }}</td>
-                        <td>{{ ad.creationDate|date }}</td>
-                        <td>{{ ad.author.firstName }} {{ ad.author.lastName }}</td>
-                        <td>{{ ad.region }}</td>
-                        <td>{{ ad.category.name}}</td>
-                    </tr>
+                    <td><img class="img-fluid img-thumbnail" width="200" src="{{ path('photo_show_one' , { 'ad' : ad.id })}}" alt="img_annonce"></td>
+                    <td>{{ ad.title }}</td>
+                    <td>{{ ad.creationDate|date("d/m/Y")  }}</td>
+                    <td>{{ ad.author.username }}</td>
+                    <td>{{ ad.region.name }}</td>
+                    <td>{{ ad.category.name}}</td>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        {% if ad.isActive == true %}
+                            <td><a href="{{ path('ads_moderate' , {'ad' : ad.id}) }}" class="btn btn-warning">Masquer Annonce</a></td>
+                        {% else %}
+                            <td><a href="{{ path('ads_moderate' , {'ad' : ad.id}) }}" class="btn btn-primary">Afficher Annonce</a></td>
+                        {% endif %}
+                    {% endif %}
+                </tr>
+                {% endif %}
             {% endfor %}
             </tbody>
+            {% if is_granted('ROLE_ADMIN') %}
+                <tfooter>
+                    <tr>
+                        <td>Modération</td>
+                        <td>Nombre d'annonces masquées : {{ inactiveAds | length  }}</td>
+                    </tr>
+                </tfooter>
 
+            {% endif %}
         </table>
 
     </div>
