--- a/templates/account/show.html.twig
+++ b/templates/account/show.html.twig
@@ -48,7 +48,7 @@
 
             <div class="d-flex justify-content-between">
 
-                <a href="{{ path('account_edit') }}" class="btn btn-primary">Mettre à jour mes inforamtions</a>
+                <a href="{{ path('account_edit') }}" class="btn btn-primary">Mettre à jour mes informations</a>
 
                 {{ include('account/_delete_form.html.twig') }}
 
@@ -80,8 +80,8 @@
 
                         <td class='clickable-data' data-href="{{ path('ads_show' , { 'ad' : ad.id}) }}"><img class="img-fluid img-thumbnail" width="100"  src="{{ path('photo_show_one' , { 'ad' : ad.id })}}" alt="img_annonce"></td>
                         <td>{{ ad.title }}</td>
-                        <td>{{ ad.creationDate|date }}</td>
-                        <td>{{ ad.region }}</td>
+                        <td>{{ ad.creationDate|date("d/m/Y") }}</td>
+                        <td>{{ ad.region.name }}</td>
                         <td>{{ ad.category.name }}</td>
                         <td><a href="{{ path('ads_edit', {'ads' : ad.id }) }}" class="btn btn-warning">Editer</a></td>
                         <td>{{ include('ads/_delete_form.html.twig' , {'ads' : ad }) }}</td>
