--- a/templates/ads/show.html.twig
+++ b/templates/ads/show.html.twig
@@ -21,13 +21,13 @@
 
             </tr>
             <tr>
-                <td class="font-weight-bold">Région : <span class="font-weight-normal">{{ ad.region }}</span></td>
+                <td class="font-weight-bold">Région : <span class="font-weight-normal">{{ ad.region.name }}</span></td>
 
             </tr>
             <tr>
                 <td class="font-weight-bold">Coordonnées du vendeur</td>
             </tr>
-            {% if is_granted('ROLE_USER') %}
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <tr>
                     <td colspan="2" class="text-left">- Prénom : {{  ad.author.FirstName }}</td>
                 </tr>
@@ -66,7 +66,7 @@
         </table>
 
         <div class="d-flex justify-content-between">
-            {% if is_granted('ROLE_USER') %}
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <a href="{{ path('account_show') }}" class="btn btn-primary">Retour a mon compte</a>
             {% endif %}
             <a href="{{ path('ads') }}" class="btn btn-primary">Retour à la liste d'annonces</a>
