--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,21 +10,21 @@
     <body>
         {% block header %}
             <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-                <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{{ path('welcome') }}">Annonces & Co</a></h5>
+                <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{{ path('welcome') }}">Annonces & Co {% if is_granted("ROLE_ADMIN") %}<span class="text-warning">(ADMIN){% endif %}</span></a></h5>
                 <nav class="my-2 my-md-0 mr-md-3">
                     <a class="p-2 text-dark" href="{{ path('ads') }}">Lire les annonces</a>
-                    {% if is_granted("ROLE_USER") %}
+                    {% if is_granted("IS_AUTHENTICATED_FULLY") %}
                         <a class="p-2 text-dark" href="{{ path('ads_new') }}">Déposer une annonce</a>
                         <a class="p-2 text-dark" href="{{ path('account_show') }}">Mon compte <span>( {{ person.username }} )</span></a>
                     {% endif %}
                     <a class="p-2 text-dark" href="#">Support</a>
                     <a class="p-2 text-dark" href="#">Contact</a>
                 </nav>
-                {% if is_granted("ROLE_USER") == false %}
+                {% if is_granted("IS_AUTHENTICATED_FULLY") == false %}
                 <a class="btn btn-outline-primary" href="{{ path('login') }}">Connection</a>
                 <a class="btn btn-outline-primary" href="{{ path('register') }}">Inscription</a>
                 {% endif %}
-                {% if is_granted("ROLE_USER") %}
+                {% if is_granted("IS_AUTHENTICATED_FULLY") %}
                 <a class="btn btn-outline-danger" href="{{ path('logout') }}">Déconnection</a>
                 {% endif %}
             </div>
