--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        {% endblock %}
-    </head>
-    <body>
-        {% block header %}
-            <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-                <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{{ path('welcome') }}">Annonces & Co {% if is_granted("ROLE_ADMIN") %}<span class="text-warning">(ADMIN){% endif %}</span></a></h5>
-                <nav class="my-2 my-md-0 mr-md-3">
-                    <a class="p-2 text-dark" href="{{ path('ads') }}">Lire les annonces</a>
-                    {% if is_granted("IS_AUTHENTICATED_FULLY") %}
-                        <a class="p-2 text-dark" href="{{ path('ads_new') }}">Déposer une annonce</a>
-                        <a class="p-2 text-dark" href="{{ path('account_show') }}">Mon compte <span>( {{ person.username }} )</span></a>
-                    {% endif %}
-                    <a class="p-2 text-dark" href="#">Support</a>
-                    <a class="p-2 text-dark" href="#">Contact</a>
-                </nav>
-                {% if is_granted("IS_AUTHENTICATED_FULLY") == false %}
-                <a class="btn btn-outline-primary" href="{{ path('login') }}">Connection</a>
-                <a class="btn btn-outline-primary" href="{{ path('register') }}">Inscription</a>
-                {% endif %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block stylesheets %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    {% endblock %}
+</head>
+<body>
+{% block header %}
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+        <h5 class="my-0 mr-md-auto font-weight-normal"><a href="{{ path('welcome') }}">Annonces & Co {% if is_granted("ROLE_ADMIN") %}<span class="text-warning">(ADMIN){% endif %}</span></a></h5>
+        <nav class="navbar-expand-lg  my-0 mr-md-3 ">
+            <ul class="navbar-nav align-middle">
+
+                <li class="nav-item align-middle"><a class="p-2 text-dark" href="{{ path('ads') }}">Lire les annonces</a></li>
                 {% if is_granted("IS_AUTHENTICATED_FULLY") %}
-                <a class="btn btn-outline-danger" href="{{ path('logout') }}">Déconnection</a>
+                    <li class="nav-item"> <a class="p-2 text-dark" href="{{ path('ads_new') }}">Déposer une annonce</a></li>
+                    <li class="nav-item"><a class="p-2 text-dark" href="{{ path('account_show') }}">Mon compte <span>( {{ app.user.username }} )</span></a></li>
                 {% endif %}
-            </div>
-        {% endblock %}
+                <li class="nav-item"><a class="p-2 text-dark" href="#">Support</a></li>
+                <li class="nav-item"><a class="p-2 text-dark" href="#">Contact</a></li>
 
-        {% block body %}
 
-        {% endblock %}
+            </ul>
+        </nav>
+        {% if is_granted("IS_AUTHENTICATED_FULLY") == false %}
+            <a class="btn btn-outline-primary" href="{{ path('login') }}">Connection</a>
+            <a class="btn btn-outline-primary" href="{{ path('register') }}">Inscription</a>
+        {% endif %}
+        {% if is_granted("IS_AUTHENTICATED_FULLY") %}
+            <a class="btn btn-outline-danger" href="{{ path('logout') }}">Déconnection</a>
+        {% endif %}
+    </div>
+{% endblock %}
 
-        {% block javascripts %}
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-            <script src="js/main.js"></script>
-        {% endblock %}
-    </body>
+{% block body %}
+
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+{% endblock %}
+</body>
 </html>
