--- a/templates/account/show.html.twig
+++ b/templates/account/show.html.twig
@@ -70,21 +70,22 @@
                     <td>Date</td>
                     <td>Région</td>
                     <td>Catégorie</td>
-                    <td>Editer</td>
-                    <td>Suprimer</td>
+                    <td colspan="2" class="text-center">Action</td>
                 </tr>
                 </thead>
                 <tbody>
                 {% for ad in ads %}
-                    <tr>
+                    <tr  {% if ad.isActive != true %} class="bg-info" {% endif %}>
 
                         <td class='clickable-data' data-href="{{ path('ads_show' , { 'ad' : ad.id}) }}"><img class="img-fluid img-thumbnail" width="100"  src="{{ path('photo_show_one' , { 'ad' : ad.id })}}" alt="img_annonce"></td>
                         <td>{{ ad.title }}</td>
                         <td>{{ ad.creationDate|date("d/m/Y") }}</td>
                         <td>{{ ad.region.name }}</td>
                         <td>{{ ad.category.name }}</td>
+                        {% if is_granted('edit' , ad) %}
                         <td><a href="{{ path('ads_edit', {'ads' : ad.id }) }}" class="btn btn-warning">Editer</a></td>
                         <td>{{ include('ads/_delete_form.html.twig' , {'ads' : ad }) }}</td>
+                        {% endif %}
                     </tr>
                 {% endfor %}
                 </tbody>
